@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2005-2021 Xceptance Software Technologies GmbH
+ * Copyright (c) 2005-2022 Xceptance Software Technologies GmbH
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -56,7 +56,7 @@ public class DataRecordFactory
         }
 
         // create the statistics object
-        final Data stats = c.newInstance();
+        final Data stats = c.getDeclaredConstructor().newInstance();
         stats.fromCSV(s);
 
         return stats;
